[package]
name = "real_unit"
version = "0.1.0"
edition = "2021"
authors = ["Craig Osborn <craig@craigosborn.dev>"]
description = "A real number on the closed unit interval [0.0, 1.0]"

[features]
default = ["macros"]
macros = ["real_unit_macro"]

[dependencies]
real_unit_macro = { path = "../real_unit_macro", optional = true }
